--- a/frontend/src/style.module.css
+++ b/frontend/src/style.module.css
@@ -38,6 +38,7 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 
 * {
   margin: 0;
@@ -93,15 +94,26 @@ a:-webkit-any-link {
 .title {
   font-family: "Poppins", sans-serif;
   padding: 0 30vw 0 30vw;
-  font-size: 2vw;
-  font-weight: 600;
+  font-size: 2.1vw;
+  font-weight: 800;
   letter-spacing: -1px;
+}
+
+.text_gradient {
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 900;
+  background-image: linear-gradient(45deg, #8360c3 25%, #7a9ef2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
 
 .title_desc {
   padding: 0 30vw 0 30vw;
-  font-size: 1.2vw;
-  font-weight: 500;
+  font-size: 1vw;
+  font-weight: 400;
+  font-family: "Noto Sans KR", sans-serif !important;
 }
 
 .input_zone {
@@ -109,7 +121,7 @@ a:-webkit-any-link {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 .category_options {
@@ -177,11 +189,34 @@ input {
     border-image: initial; */
 }
 
+.category_input {
+  width: 10vw;
+  height: 5vh;
+  text-rendering: auto;
+  color: -internal-light-dark(black, white);
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 5%;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  appearance: auto;
+  background-color: #f7f9fd;
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  margin: 0em;
+  font: 400 13.3333px Arial;
+  padding: 0.5vw 0.3vw;
+  border: none;
+  border-radius: 10px;
+}
+
 button {
   width: 10vw;
   height: 5vh;
-  color: #fff;
-  font-size: 1vw;
+  color: #f7f9fd;
+  font-size: 0.9vw;
   font-weight: 700;
   appearance: auto;
   text-rendering: auto;
@@ -195,7 +230,7 @@ button {
   text-align: center;
   align-items: flex-start;
   cursor: pointer;
-  background-color: #7399f1;
+  background-color: #7399f1dd;
   box-sizing: border-box;
   margin: 0em;
   padding: 5% 5%;
@@ -212,6 +247,25 @@ button:hover {
   background-color: #f7f9fd;
   color: #7399f1;
   transition: all 0.3s ease-in-out;
+  animation-name: colorchange;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 1000ms;
+  animation-fill-mode: forwards;
+}
+
+@keyframes colorchange {
+  from {
+    color: #7399f1;
+  }
+
+  /* 50% {
+    color: #7399f1;
+  } */
+
+  to {
+    color: #8360c3dd;
+  }
 }
 
 .intro_zone {
@@ -602,13 +656,20 @@ i {
   vertical-align: middle;
 }
 
-::-webkit-scrollbar { display: none; }
+::-webkit-scrollbar {
+  display: none;
+}
 
 .similarity_top5 {
   padding-top: 2%;
+  padding-left: 30%;
+  padding-bottom: 2%;
   font-size: 0.9vw;
+  display: block;
+  text-align: left;
 }
 
 .similarity_top5 div {
   padding-top: 1%;
+  padding-bottom: 0.5%;
 }
