--- a/frontend/src/style.module.css
+++ b/frontend/src/style.module.css
@@ -84,16 +84,18 @@ a:-webkit-any-link {
 
 .title_zone {
   width: 100%;
-  display: flex-wrap;
+  display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   text-align: center;
   margin-top: 7%;
+  cursor: pointer;
 }
 
 .title {
   font-family: "Poppins", sans-serif;
-  padding: 0 30vw 0 30vw;
+  width: 40vw;
   font-size: 2.1vw;
   font-weight: 800;
   letter-spacing: -1px;
@@ -331,14 +333,14 @@ i {
 }
 
 /* */
-.slack {
+/* .slack {
   position: relative;
   z-index: 100;
   margin: 80px auto;
   width: 96px;
-  height: 96px;
-  /* background: #f5f5f5; */
-  transform: rotate(-15deg);
+  height: 96px; */
+/* background: #f5f5f5; */
+/* transform: rotate(-15deg);
 }
 
 .slack-dot {
@@ -598,7 +600,7 @@ i {
     right: 78px;
     width: 18px;
   }
-}
+} */
 
 .loading_effect_zone {
   padding: 5% 5% 1% 5%;
@@ -609,7 +611,7 @@ i {
   font-size: 1.2vw;
 }
 
-.result_zone {
+/* .result_zone {
   display: block;
   margin: 2% 0 10% 0;
   display: flex-wrap;
@@ -654,7 +656,7 @@ i {
   height: 55px;
   padding: 1%;
   vertical-align: middle;
-}
+} */
 
 ::-webkit-scrollbar {
   display: none;
@@ -672,4 +674,112 @@ i {
 .similarity_top5 div {
   padding-top: 1%;
   padding-bottom: 0.5%;
+}
+
+.result_zone {
+  padding-top: 5%;
+  width: 100vw;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation-name: slidein;
+  animation-iteration-count: 1;
+  animation-duration: 1000ms;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slidein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.report_zone1 {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  background: #ffffff50;
+  border-radius: 20px 20px 0 0;
+  position: relative;
+  box-shadow: 0 0 10px 10px #7483a805;
+}
+
+.report_zone1::before {
+  content: "";
+  width: 7vw;
+  height: 3vw;
+  background-image: url("신호등.png");
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.most_similarity {
+  display: flex;
+  flex-direction: column;
+  height: max-content;
+}
+
+.most_similarity_txt {
+  font-size: 1vw;
+  font-weight: 600;
+  position: relative;
+  left: 0;
+  color: #333;
+  margin-left: 5%;
+  margin-top: 1.5%;
+}
+
+.most_similarity_num {
+  position: relative;
+  left: 0;
+  font-size: 2.2vw;
+  font-weight: 600;
+  margin-left: 5%;
+  margin-bottom: 2%;
+}
+
+.report_zone2 {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  background-color: #7e88df10;
+  border-radius: 0 0 20px 20px;
+  position: relative;
+  margin-bottom: 10%;
+}
+
+.similar_list {
+  margin: 5%;
+}
+
+.list_title {
+  font-weight: 600;
+  font-size: 1.1vw;
+  padding-bottom: 5%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul li {
+  background-color: #ffffff77;
+  border-radius: 10px;
+  width: 20vw;
+  display: flex;
+  padding: 5%;
+  margin-top: 5%;
+}
+
+.rank {
+}
+
+.mark_name {
 }
