--- a/frontend/src/style.module.css
+++ b/frontend/src/style.module.css
@@ -609,7 +609,7 @@ ul li {
   font-family: "Poppins", "Noto Sans KR", sans-serif;
   font-size: 1.7vw;
   line-height: 3vw;
-  color: #52b788ee;
+  color: rgba(11, 82, 140, 0.836);
   align-content: stretch;
   align-items: center;
   padding: 10px;
